tests/lean/namedHoles.lean.expected.out
namedHoles.lean:9:12-9:14: error: application type mismatch
  f ?x ?x
argument
  ?x
has type
  Nat : Type
but is expected to have type
  Bool : Type
f ?x sorry : Nat
g ?x ?x : Nat
20
foo (fun x => ?hole) ?hole : Nat
bla ?hole fun x => ?hole : Nat
namedHoles.lean:35:38-35:43: error: synthetic hole has already been defined with an incompatible local context
boo (fun x => ?hole) fun y => sorry : Nat
11
12
namedHoles.lean:58:26-58:31: error: synthetic hole has already been defined and assigned to value incompatible with the current context
  y
